package builder;

public interface Builder {

    Builder setName(String name);

    Builder setIdNumer(String idNumber);

    Builder setIdType(String idType);

    Builder setCardType(String cardType);

    Builder setCardNumber(String cardNumber);

}
